canarydeployment/frontend-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/don-gato-y-asociados-backend-network: "true"
        io.kompose.service: frontend
        version: "0.0.2"
    spec:
      containers:
        - image: closorio/frontend:latestv2
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
