canarydeployment/dongatoapp-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dongato-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 3000
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "*"
  gateways:
  - dongato-gateway
  http:
  - route:
    - destination:
        host: frontend
        subset: version1
      weight: 90
    - destination:
        host: frontend
        subset: version2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
  - name: version1
    labels:
      version: "0.0.1"
  - name: version2
    labels:
      version: "0.0.2"
